--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         
         <a href="presentation.html">Presentation</a>
         <br><br>
-        <a href="services.html">Services</a>
+        <a href="service.html">Services</a>
         <br><br>
         <a href="contact.html">Contact</a>
         <br><br>
